Data/yaml-master/_samples/netpol-full.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-from-fronend
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: prod
          podSelector:
            matchLabels:
              role: backend
      ports:
        - protocol: TCP
          port: 6379
